force-app/main/default/objects/Individual_ID__c/Individual_ID__c.object-meta.xml
<CustomObject>
    <description>Table for keeping track of Individuals with their Id Numbers.</description>
    <label>Individual ID</label>
    <nameField>
        <label>Individual ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>