force-app/main/default/objects/Individual_ID__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <label>Checksum</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>