force-app/main/default/objects/Individual_ID__c/fields/Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Id_Number__c</fullName>
    <externalId>true</externalId>
    <label>Id Number</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>