force-app/main/default/objects/Individual_ID__c/fields/Number_Of_Times_Searched__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Times_Searched__c</fullName>
    <label>Number Of Times Searched</label>
    <summaryForeignKey>Id_Number_Search__c.Individual_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>